// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WaitingForPlayers renders correctly for a guest user 1`] = `
<DocumentFragment>
  <h1
    class="sc-69bb2827-0 iUjoYw"
  >
    Waiting for player...
  </h1>
  <button
    class="sc-c2948911-0 fZBMRl"
  >
    Join Game
  </button>
</DocumentFragment>
`;

exports[`WaitingForPlayers renders correctly for a non-guest user 1`] = `
<DocumentFragment>
  <h1
    class="sc-69bb2827-0 iUjoYw"
  >
    Waiting for opponent...
  </h1>
</DocumentFragment>
`;
